// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application Gateway With Defaults renders an Application Gateway with defaults and checks snapshot 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azapi_resource.testAzureApplicationGatewayDefaults2_gateway_EFA30CC9.id}"
    },
    "location": {
      "value": "\${azapi_resource.testAzureApplicationGatewayDefaults2_resource-group-resource_89D042E1.location}"
    },
    "name": {
      "value": "\${azapi_resource.testAzureApplicationGatewayDefaults2_gateway_EFA30CC9.name}"
    }
  },
  "provider": {
    "azapi": [
      {
      }
    ]
  },
  "resource": {
    "azapi_resource": {
      "testAzureApplicationGatewayDefaults2_gateway_EFA30CC9": {
        "body": {
          "properties": {
            "backendAddressPools": [
              {
                "name": "backend-address-pool-1"
              },
              {
                "backendAddresses": [
                  {
                    "ipAddress": "10.0.0.4"
                  },
                  {
                    "ipAddress": "10.0.0.5"
                  },
                  {
                    "ipAddress": "10.0.0.6"
                  }
                ],
                "name": "backend-address-pool-2"
              }
            ],
            "backendHttpSettingsCollection": [
              {
                "cookieBasedAffinity": "Disabled",
                "name": "backend-http-setting",
                "port": 80,
                "protocol": "Http",
                "requestTimeout": 20
              }
            ],
            "frontendIPConfigurations": [
              {
                "name": "Public",
                "publicIPAddress": {
                  "id": "/subscriptions/sub/resourceGroups/rg/providers/Microsoft.Network/publicIPAddresses/pip"
                }
              }
            ],
            "frontendPorts": [
              {
                "name": "frontend-port",
                "port": 80
              }
            ],
            "gatewayIPConfigurations": [
              {
                "name": "gateway-ip-config",
                "subnet": {
                  "id": "/subscriptions/sub/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet"
                }
              }
            ],
            "httpListeners": [
              {
                "frontendIPConfiguration": {
                  "id": "Public"
                },
                "frontendPort": {
                  "id": "frontend-port"
                },
                "name": "http-listener",
                "protocol": "Http"
              }
            ],
            "requestRoutingRules": [
              {
                "backendAddressPool": {
                  "id": "backend-address-pool-1"
                },
                "backendHttpSettings": {
                  "id": "backend-http-setting"
                },
                "httpListener": {
                  "id": "http-listener"
                },
                "name": "request-routing-rule-1",
                "ruleType": "Basic"
              },
              {
                "backendAddressPool": {
                  "id": "backend-address-pool-2"
                },
                "backendHttpSettings": {
                  "id": "backend-http-setting"
                },
                "httpListener": {
                  "id": "http-listener"
                },
                "name": "request-routing-rule-2",
                "ruleType": "Basic"
              }
            ],
            "sku": {
              "capacity": 2,
              "name": "WAF_v2",
              "tier": "WAF_v2"
            }
          }
        },
        "location": "eastus",
        "name": "application-gateway",
        "parent_id": "\${azapi_resource.testAzureApplicationGatewayDefaults2_resource-group-resource_89D042E1.id}",
        "type": "Microsoft.Network/applicationGateways@2023-09-01"
      },
      "testAzureApplicationGatewayDefaults2_resource-group-resource_89D042E1": {
        "lifecycle": [
          {
            "ignore_changes": [
            ]
          }
        ],
        "location": "eastus",
        "name": "rg-application-gateway",
        "type": "Microsoft.Resources/resourceGroups@2022-09-01"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azapi": {
        "source": "Azure/azapi",
        "version": "2.4.0"
      }
    }
  }
}"
`;

exports[`Application Gateway with Legacy Properties renders an Application Gateway with legacy properties and checks snapshot 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azapi_resource.testLegacyApplicationGateway_gateway_EAD3C814.id}"
    },
    "location": {
      "value": "\${azapi_resource.testLegacyApplicationGateway_resource-group-resource_D451BA66.location}"
    },
    "name": {
      "value": "\${azapi_resource.testLegacyApplicationGateway_gateway_EAD3C814.name}"
    }
  },
  "provider": {
    "azapi": [
      {
      }
    ]
  },
  "resource": {
    "azapi_resource": {
      "testLegacyApplicationGateway_gateway_EAD3C814": {
        "body": {
          "properties": {
            "backendAddressPools": [
              {
                "name": "legacy-backend-pool"
              }
            ],
            "backendHttpSettingsCollection": [
              {
                "cookieBasedAffinity": "Disabled",
                "name": "legacy-http-settings",
                "port": 80,
                "protocol": "Http"
              }
            ],
            "frontendIPConfigurations": [
              {
                "name": "legacy-frontend-ip",
                "publicIPAddress": {
                  "id": "/subscriptions/sub/resourceGroups/rg/providers/Microsoft.Network/publicIPAddresses/pip"
                }
              }
            ],
            "frontendPorts": [
              {
                "name": "legacy-port-80",
                "port": 80
              }
            ],
            "gatewayIPConfigurations": [
              {
                "name": "legacy-gateway-ip-config",
                "subnet": {
                  "id": "/subscriptions/sub/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet"
                }
              }
            ],
            "httpListeners": [
              {
                "frontendIPConfiguration": {
                  "id": "legacy-frontend-ip"
                },
                "frontendPort": {
                  "id": "legacy-port-80"
                },
                "name": "legacy-listener",
                "protocol": "Http"
              }
            ],
            "requestRoutingRules": [
              {
                "backendAddressPool": {
                  "id": "legacy-backend-pool"
                },
                "backendHttpSettings": {
                  "id": "legacy-http-settings"
                },
                "httpListener": {
                  "id": "legacy-listener"
                },
                "name": "legacy-routing-rule",
                "ruleType": "Basic"
              }
            ],
            "sku": {
              "capacity": 1,
              "name": "Standard_v2",
              "tier": "Standard_v2"
            }
          }
        },
        "location": "eastus",
        "name": "legacy-application-gateway",
        "parent_id": "\${azapi_resource.testLegacyApplicationGateway_resource-group-resource_D451BA66.id}",
        "type": "Microsoft.Network/applicationGateways@2023-09-01"
      },
      "testLegacyApplicationGateway_resource-group-resource_D451BA66": {
        "lifecycle": [
          {
            "ignore_changes": [
            ]
          }
        ],
        "location": "eastus",
        "name": "rg-legacy-application-gateway",
        "type": "Microsoft.Resources/resourceGroups@2022-09-01"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azapi": {
        "source": "Azure/azapi",
        "version": "2.4.0"
      }
    }
  }
}"
`;

exports[`Application Gateway with Mixed Properties renders an Application Gateway with mixed properties (flattened override legacy) and checks snapshot 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azapi_resource.testMixedApplicationGateway_gateway_642FA466.id}"
    },
    "location": {
      "value": "\${azapi_resource.testMixedApplicationGateway_resource-group-resource_A91501AA.location}"
    },
    "name": {
      "value": "\${azapi_resource.testMixedApplicationGateway_gateway_642FA466.name}"
    }
  },
  "provider": {
    "azapi": [
      {
      }
    ]
  },
  "resource": {
    "azapi_resource": {
      "testMixedApplicationGateway_gateway_642FA466": {
        "body": {
          "properties": {
            "backendAddressPools": [
              {
                "name": "legacy-backend-pool"
              }
            ],
            "backendHttpSettingsCollection": [
              {
                "cookieBasedAffinity": "Disabled",
                "name": "legacy-http-settings",
                "port": 80,
                "protocol": "Http"
              }
            ],
            "frontendIPConfigurations": [
              {
                "name": "legacy-frontend-ip",
                "publicIPAddress": {
                  "id": "/subscriptions/sub/resourceGroups/rg/providers/Microsoft.Network/publicIPAddresses/pip"
                }
              }
            ],
            "frontendPorts": [
              {
                "name": "legacy-port-80",
                "port": 80
              }
            ],
            "gatewayIPConfigurations": [
              {
                "name": "new-gateway-ip-config",
                "subnet": {
                  "id": "/subscriptions/sub/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet"
                }
              }
            ],
            "httpListeners": [
              {
                "frontendIPConfiguration": {
                  "id": "legacy-frontend-ip"
                },
                "frontendPort": {
                  "id": "legacy-port-80"
                },
                "name": "legacy-listener",
                "protocol": "Http"
              }
            ],
            "requestRoutingRules": [
              {
                "backendAddressPool": {
                  "id": "legacy-backend-pool"
                },
                "backendHttpSettings": {
                  "id": "legacy-http-settings"
                },
                "httpListener": {
                  "id": "legacy-listener"
                },
                "name": "legacy-routing-rule",
                "ruleType": "Basic"
              }
            ],
            "sku": {
              "capacity": 3,
              "name": "WAF_v2",
              "tier": "WAF_v2"
            }
          }
        },
        "location": "eastus",
        "name": "mixed-application-gateway",
        "parent_id": "\${azapi_resource.testMixedApplicationGateway_resource-group-resource_A91501AA.id}",
        "type": "Microsoft.Network/applicationGateways@2023-09-01"
      },
      "testMixedApplicationGateway_resource-group-resource_A91501AA": {
        "lifecycle": [
          {
            "ignore_changes": [
            ]
          }
        ],
        "location": "eastus",
        "name": "rg-mixed-application-gateway",
        "type": "Microsoft.Resources/resourceGroups@2022-09-01"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azapi": {
        "source": "Azure/azapi",
        "version": "2.4.0"
      }
    }
  }
}"
`;
